# Parallel_Computing_Practice

./: 00.cpp  CMakeLists.txt  README.md  bate.h  run.sh  tips.md
Sparse_Bits/: bits_00.cpp  bits_01.cpp
Sparse_gird/: dense_grid_float.cpp  dense_grid_unorderedmap.cpp  unordedMap_bit.cpp
Sparse_matrix/: 00.cpp
cuda_practice/: grid_stride_loop.cu  mat_mul.cu  mat_mul_shared.cu  thrust_trans.cu
cuda_practice/include/: CudaAllocator.h  CudaAllocator_MSVC.h  freshman.h  ticktock.h
memory_optimization/: aosoa.cpp  cache_skip.cpp  false_sharing.cpp  kernel_convol.cpp  matrix_alloc.cpp  matrix_mul.cpp  prefetch.cpp  write_read.cpp  write_read_msvc.cpp  xy_yx_loop.cpp
multi_sparse/: pointer_dense.cpp
mylib/: CMakeLists.txt
mylib/mylib/: alignalloc.h  alignalloc_msvc.h  bate.h  mylib.cpp  mylib.h  ndarray.h  ndarray_msvc.h  pod.h  snode.h  ticktock.h
parallel_and_random_access/: tbb_spin_mutex.cpp
sparse_data_structure/Sparse_Bits/: segmentation_fault.cpp
sparse_data_structure/Sparse_gird/: dense_grid_char.cpp  dense_grid_map.cpp
sparse_data_structure/multilayer_sparse/: dense.cpp
sparse_data_structure/parallel_and_random_access/: multi_layer_cache.cpp
src/: Conway_Game_of_Life.cpp
